# Computational-Intelligence-CI-2022-01URROV-s307107

./: README.md  pyproject.toml
lab1/: READM.md  gx_utils.py  lab1.ipynb
lab2/: README.md  lab2.ipynb
lab3/: README.md  lab3.ipynb  rules_idea.txt
